--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "SmartContactsClean",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Jaime Andres Carvajal",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
@@ -28,12 +28,15 @@
     "@ionic-native/status-bar": "^4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "angularfire2": "^5.0.0-rc.7",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "firebase": "^5.0.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "promise-polyfill": "^7.1.2",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
