--- a/package.json
+++ b/package.json
@@ -21,19 +21,25 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
+    "@firebase/app": "^0.3.1",
     "@ionic-native/contacts": "^4.7.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/device": "^4.7.0",
     "@ionic-native/splash-screen": "^4.7.0",
     "@ionic-native/status-bar": "^4.7.0",
+    "@ionic/cli-plugin-cordova": "^1.6.2",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
-    "angularfire2": "^5.0.0-rc.7",
+    "angularfire2": "^5.0.0-rc.4",
+    "cordova-android": "7.0.0",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "firebase": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "firebase": "^4.5.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "promise-polyfill": "^7.1.2",
@@ -42,16 +48,23 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
+    "@angular/cli": "^6.0.1",
     "@ionic/app-scripts": "3.1.9",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-contacts": {},
       "cordova-plugin-device": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-splashscreen": {}
-    }
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-contacts": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
