--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/http": "5.2.10",
         "@angular/platform-browser": "5.2.10",
         "@angular/platform-browser-dynamic": "5.2.10",
+        "@ionic-native/app-version": "^4.7.0",
         "@ionic-native/contacts": "^4.7.0",
         "@ionic-native/core": "4.7.0",
         "@ionic-native/device": "^4.7.0",
@@ -30,6 +31,7 @@
         "@ionic/pro": "1.0.20",
         "@ionic/storage": "2.1.3",
         "cordova-android": "7.0.0",
+        "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-contacts": "^3.0.1",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
@@ -58,7 +60,8 @@
             "cordova-plugin-whitelist": {},
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-contacts": {}
+            "cordova-plugin-contacts": {},
+            "cordova-plugin-app-version": {}
         },
         "platforms": [
             "android"
