--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "0.0.1",
     "author": "Jaime Andres Carvajal",
     "homepage": "http://ionicframework.com/",
-    "private": true,
     "scripts": {
         "clean": "ionic-app-scripts clean",
         "build": "ionic-app-scripts build",
@@ -40,6 +39,7 @@
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "ionic-angular": "3.9.2",
+        "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "promise-polyfill": "^7.1.2",
         "rxjs": "5.5.10",
@@ -66,5 +66,8 @@
         "platforms": [
             "android"
         ]
+    },
+    "config": {
+        "ionic_sass": "./sass.js"
     }
 }
