--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
         "@angular/http": "5.2.10",
         "@angular/platform-browser": "5.2.10",
         "@angular/platform-browser-dynamic": "5.2.10",
-        "@ionic-native/app-version": "^4.7.0",
-        "@ionic-native/contacts": "^4.7.0",
-        "@ionic-native/core": "4.7.0",
-        "@ionic-native/device": "^4.7.0",
-        "@ionic-native/splash-screen": "^4.7.0",
-        "@ionic-native/status-bar": "^4.7.0",
+        "@ionic-native/app-version": "4.8.0",
+        "@ionic-native/contacts": "4.8.0",
+        "@ionic-native/core": "4.8.0",
+        "@ionic-native/device": "4.8.0",
+        "@ionic-native/splash-screen": "4.8.0",
+        "@ionic-native/status-bar": "4.8.0",
         "@ionic/cli-plugin-cordova": "^1.6.2",
         "@ionic/pro": "1.0.20",
         "@ionic/storage": "2.1.3",
