--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@ionic-native/contacts": "4.9.0",
         "@ionic-native/core": "4.9.0",
         "@ionic-native/device": "4.9.0",
+        "@ionic-native/facebook": "^4.9.0",
         "@ionic-native/splash-screen": "4.9.0",
         "@ionic-native/status-bar": "4.9.0",
         "@ionic/cli-plugin-cordova": "^1.6.2",
@@ -33,6 +34,7 @@
         "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-contacts": "^3.0.1",
         "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-facebook4": "^2.2.0",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
         "cordova-plugin-ionic-webview": "^1.2.1",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -61,7 +63,12 @@
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-contacts": {},
-            "cordova-plugin-app-version": {}
+            "cordova-plugin-app-version": {},
+            "cordova-plugin-facebook4": {
+                "APP_ID": "1988218104586496",
+                "APP_NAME": "SmartCleanContacts",
+                "ANDROID_SDK_VERSION": "4.+"
+            }
         },
         "platforms": [
             "android"
