--- a/package.json
+++ b/package.json
@@ -20,29 +20,42 @@
         "@angular/http": "5.2.10",
         "@angular/platform-browser": "5.2.10",
         "@angular/platform-browser-dynamic": "5.2.10",
-        "@ionic-native/app-version": "4.9.0",
+        "@ionic-native/admob-free": "^4.9.0",
+        "@ionic-native/app-version": "^4.9.0",
         "@ionic-native/contacts": "4.9.0",
         "@ionic-native/core": "4.9.0",
         "@ionic-native/device": "4.9.0",
         "@ionic-native/facebook": "^4.9.0",
+        "@ionic-native/network": "^4.9.0",
+        "@ionic-native/onesignal": "^4.9.0",
+        "@ionic-native/social-sharing": "^4.9.0",
         "@ionic-native/splash-screen": "4.9.0",
+        "@ionic-native/sqlite": "^4.9.0",
         "@ionic-native/status-bar": "4.9.0",
         "@ionic/cli-plugin-cordova": "^1.6.2",
         "@ionic/pro": "1.0.20",
         "@ionic/storage": "2.1.3",
+        "cordova-admob-sdk": "^0.17.0",
         "cordova-android": "6.4.0",
+        "cordova-plugin-admob-free": "^0.17.2",
         "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-contacts": "^3.0.1",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-facebook4": "^2.2.0",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
         "cordova-plugin-ionic-webview": "^1.2.1",
+        "cordova-plugin-network-information": "^2.0.1",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-plugin-x-socialsharing": "^5.4.1",
+        "cordova-promise-polyfill": "0.0.2",
+        "cordova-sqlite-storage": "^2.3.3",
+        "es6-promise-plugin": "^4.2.2",
         "ionic-angular": "3.9.2",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "onesignal-cordova-plugin": "^2.4.1",
         "promise-polyfill": "^7.1.2",
         "rxjs": "5.5.10",
         "sw-toolbox": "3.6.0",
@@ -68,7 +81,12 @@
                 "APP_ID": "1988218104586496",
                 "APP_NAME": "SmartCleanContacts",
                 "ANDROID_SDK_VERSION": "4.+"
-            }
+            },
+            "onesignal-cordova-plugin": {},
+            "cordova-plugin-admob-free": {},
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-x-socialsharing": {},
+            "cordova-sqlite-storage": {}
         },
         "platforms": [
             "android"
