--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "@ionic-native/core": "4.9.0",
         "@ionic-native/device": "4.9.0",
         "@ionic-native/facebook": "^4.9.0",
+        "@ionic-native/instagram": "^4.9.0",
+        "@ionic-native/linkedin": "^4.9.0",
         "@ionic-native/network": "^4.9.0",
         "@ionic-native/onesignal": "^4.9.0",
         "@ionic-native/social-sharing": "^4.9.0",
@@ -37,6 +39,7 @@
         "@ionic/storage": "2.1.3",
         "cordova-admob-sdk": "^0.17.0",
         "cordova-android": "6.4.0",
+        "cordova-instagram-plugin": "^0.5.7",
         "cordova-plugin-admob-free": "^0.17.2",
         "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-contacts": "^3.0.1",
@@ -44,6 +47,7 @@
         "cordova-plugin-facebook4": "^2.2.0",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
         "cordova-plugin-ionic-webview": "^1.2.1",
+        "cordova-plugin-linkedin": "^1.2.1",
         "cordova-plugin-network-information": "^2.0.1",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
@@ -51,6 +55,7 @@
         "cordova-plugin-x-socialsharing": "^5.4.1",
         "cordova-promise-polyfill": "0.0.2",
         "cordova-sqlite-storage": "^2.3.3",
+        "cordova-universal-clipboard": "git+https://github.com/Visigo/CordovaClipboard.git",
         "es6-promise-plugin": "^4.2.2",
         "ionic-angular": "3.9.2",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -86,7 +91,11 @@
             "cordova-plugin-admob-free": {},
             "cordova-plugin-network-information": {},
             "cordova-plugin-x-socialsharing": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-linkedin": {
+                "APP_ID": "YOUR_APP_ID"
+            },
+            "cordova-instagram-plugin": {}
         },
         "platforms": [
             "android"
