--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ionic-native/core": "4.9.0",
         "@ionic-native/device": "4.9.0",
         "@ionic-native/facebook": "^4.9.0",
+        "@ionic-native/google-plus": "^4.9.0",
         "@ionic-native/instagram": "^4.9.0",
         "@ionic-native/linkedin": "^4.9.0",
         "@ionic-native/network": "^4.9.0",
@@ -37,17 +38,17 @@
         "@ionic/cli-plugin-cordova": "^1.6.2",
         "@ionic/pro": "1.0.20",
         "@ionic/storage": "2.1.3",
+        "angularfire2": "^5.0.0-rc.11",
         "cordova-admob-sdk": "^0.17.0",
         "cordova-android": "6.4.0",
-        "cordova-instagram-plugin": "^0.5.7",
         "cordova-plugin-admob-free": "^0.17.2",
         "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-contacts": "^3.0.1",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-facebook4": "^2.2.0",
+        "cordova-plugin-googleplus": "^5.3.0",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
         "cordova-plugin-ionic-webview": "^1.2.1",
-        "cordova-plugin-linkedin": "^1.2.1",
         "cordova-plugin-network-information": "^2.0.1",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
@@ -55,8 +56,8 @@
         "cordova-plugin-x-socialsharing": "^5.4.1",
         "cordova-promise-polyfill": "0.0.2",
         "cordova-sqlite-storage": "^2.3.3",
-        "cordova-universal-clipboard": "git+https://github.com/Visigo/CordovaClipboard.git",
         "es6-promise-plugin": "^4.2.2",
+        "firebase": "^5.2.0",
         "ionic-angular": "3.9.2",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -92,10 +93,9 @@
             "cordova-plugin-network-information": {},
             "cordova-plugin-x-socialsharing": {},
             "cordova-sqlite-storage": {},
-            "cordova-plugin-linkedin": {
-                "APP_ID": "YOUR_APP_ID"
-            },
-            "cordova-instagram-plugin": {}
+            "cordova-plugin-googleplus": {
+                "REVERSED_CLIENT_ID": "myreversedclientid"
+            }
         },
         "platforms": [
             "android"
